deploy: programacioniesbalmis/programacioniesbalmis@d5f95354603f8bf87f11181bb4f60d22930675e5

--- a/Semipresencial/codigo_aules.html
+++ b/Semipresencial/codigo_aules.html
@@ -118,7 +118,7 @@
                 <div class="p-1 align-self-center">Videotutoriales Tema 1</div>
             </div>
             <div class="m-2 btn-group-vertical col-xl-8 col-12" role="group" aria-label="Vertical button group">
-                <a class="btn border p-2" style="text-align: left;" target="_blank" href="https://youtu.be/Qy4Yt_5SfYg">
+                <a class="btn border p-2" style="text-align: left;" target="_blank" href="https://youtu.be/ctkMZBPSdLo">
                     Tema 1 - Introducción a dotNET y CSharp
                 </a>
             </div>
@@ -135,10 +135,10 @@
                 <div class="p-1 align-self-center">Videotutoriales Tema 1</div>
             </div>
             <div class="m-2 btn-group-vertical col-xl-8 col-12" role="group" aria-label="Vertical button group">
-                <a class="btn border p-2" style="text-align: left;" target="_blank" href="https://youtu.be/keHz6DJYmy0">
+                <a class="btn border p-2" style="text-align: left;" target="_blank" href="https://youtu.be/sBr3UQ1vGKw">
                     Tema 2.1 - Instalación Entorno
                 </a>
-                <a class="btn border p-2" style="text-align: left;" target="_blank" href="https://youtu.be/faNgPgVVolA">
+                <a class="btn border p-2" style="text-align: left;" target="_blank" href="https://youtu.be/3PrytPAB4Uo">
                     Tema 2.1 - Creando un primer proyecto
                 </a>
                 <a class="btn border p-2" style="text-align: left;" target="_blank" href="https://youtu.be/gFJeu3v_rPg">
