deploy: programacioniesbalmis/programacioniesbalmis@0143afa8303caf51985f354c6dd38f4f255dba1a

--- a/B1-Net_y_Aspectos_lexicos_de_CSharp/Ejercicios/1_ejercicios_dotNetFW/1_ejercicios_tema1.html
+++ b/B1-Net_y_Aspectos_lexicos_de_CSharp/Ejercicios/1_ejercicios_dotNetFW/1_ejercicios_tema1.html
@@ -159,7 +159,7 @@
 <p><a href="./1_ejercicios_tema1.pdf">Descargar estos ejercicios</a></p>
 <div class="ejercicio">
 <h3 id="ejercicio-1">Ejercicio 1 </h3>
-<p>Responde <strong>con tus palabras</strong> a las siguientes preguntas. Es imprescindible que leas el tema con atención para entender estos conceptos que son importantes pero en los que ya no vamos a profundizar, todas las respuestas las puedes encontrar en el tema 1.</p>
+<p>Responde <strong>con tus palabras</strong> a las siguientes preguntas. Es imprescindible que leas el tema con atención para entender estos conceptos que son importantes pero en los que ya no vamos a incidir más, todas las respuestas las puedes encontrar en el tema 1.</p>
 <blockquote>
 <p>⚠️ <strong>Aviso:</strong> Este ejercicio se comenzará en clase si hay tiempo, pero se terminará en casa. Se deberá copiar cada pregunta enfatizada en negrita que será respondida justo debajo sin enfatizar. El ejercicio será exportado a <strong>formato .pdf</strong> y se entregará a través de la plataforma Aules en la fecha indicada.</p>
 </blockquote>
