deploy: programacioniesbalmis/programacioniesbalmis@c7f05893623a9d551e3b83458436aa7b21b49b67

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -59,6 +59,11 @@
                 </a>
               </li>
               <li class="h6 list-group-item list-group-item-action">
+                <a target="_blank" href="https://programacioniesbalmis.github.io/B1-Net_y_Aspectos_lexicos_de_CSharp/Ejercicios/1_ejercicios_dotNetFW/1_ejercicios_tema1.html">
+                  Ejercicios Tema 1
+                </a>
+              </li>
+              <li class="h6 list-group-item list-group-item-action">
                 <a target="_blank" href="https://programacioniesbalmis.github.io/B1-Net_y_Aspectos_lexicos_de_CSharp/Ejercicios/2_ejercicios_write_y_read/2_ejercicios_write_y_read.html">
                   Ejercicios Write & Read
                 </a>
