--- a/B4-POO2/Tema7_2.html
+++ b/B4-POO2/Tema7_2.html
@@ -30,6 +30,15 @@
   border-radius: 5px;
   box-shadow: 0 0 7px 0 rgba(78, 120, 158, 0.1);
 }
+.markdown-preview.markdown-preview .resumen {
+  background-color: #d6d6d6;
+  border: 2px solid #b0b0b0;
+  padding: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0 0 7px 0 rgba(78, 120, 158, 0.1);
+}
 .markdown-preview.markdown-preview .ejercicio {
   background-color: #f5faf5;
   border: 2px solid #969b96;
@@ -134,6 +143,28 @@
   .markdown-preview.markdown-preview .flotante_der {
     width: auto;
   }
+}
+.markdown-preview.markdown-preview .cabeceras_examen {
+  background-color: #fcfcfc;
+  border: 2px solid #b7bbb7;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0 0 7px 0 rgba(78, 120, 158, 0.1);
+  color: black;
+  font-size: 8pt;
+}
+.markdown-preview.markdown-preview .ejercicio_control {
+  background-color: #f9faf9;
+  border: 2px solid #b4b7b4;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0 0 7px 0 rgba(78, 120, 158, 0.1);
 }
 
       </style>
