deploy: programacioniesbalmis/programacioniesbalmis@6bf04038e09dadcde9f6414cd2e8503a1062d53c

--- a/B5-POO3_IO_y_Persistencia/Ejercicios/2_ejercicios_flujos_entrada_y_salida/2_ejercicios_flujos_entrada_y_salida_adaptados_FE.html
+++ b/B5-POO3_IO_y_Persistencia/Ejercicios/2_ejercicios_flujos_entrada_y_salida/2_ejercicios_flujos_entrada_y_salida_adaptados_FE.html
@@ -291,17 +291,25 @@ Si no encuentra la subcadena en todo el fichero, nos mostrará un mensaje de "<e
 <li>Buscar una <strong>expresión regular mínima</strong> que muestre <strong>todos los diptongos</strong>.</li>
 </ol>
 </div> <!-- fin ejercicio -->
+<div class="ejercicio">
 <h3 id="ejercicio-11">Ejercicio 11 </h3>
 <p>Nos interesa detectar y analizar  correos electrónicos en un archivo de texto. Para ello haz una aplicación que:</p>
 <ul>
 <li>Solicite la ruta de un archivo de texto y verifique su existencia.</li>
 <li>Busque en el archivo todas las direcciones de correo usando expresiones regulares. (Obligatorio usar Match.Groups)</li>
-<li>Genere un informe con los resultados, indicando:</li>
+<li>Genere un informe con los resultados, indicando:
+<ul>
 <li>Las direcciones de correo encontradas y su línea en el archivo.</li>
+</ul>
+</li>
 <li>Un resumen de estadísticas, incluyendo:<br>
-Número de correos por dominio (sólo se admiten <a href="http://gmail.com">gmail.com</a>, <a href="http://iesdoctorbalmis.com">iesdoctorbalmis.com</a>).</li>
+Número de correos por dominio (sólo se admiten <a href="http://gmail.com">gmail.com</a>, <a href="http://iesdoctorbalmis.com">iesdoctorbalmis.com</a>).
+<ul>
 <li>Cantidad de correos españoles (.es) vs. internacionales (otros dominios).</li>
 </ul>
+</li>
+</ul>
+</div> <!-- fin ejercicio -->
 
       </div>
       
