deploy: programacioniesbalmis/programacioniesbalmis@67be1527d132843116af85dea663df17a90eedb1

--- a/B5-POO3_IO_y_Persistencia/Ejercicios/2_ejercicios_flujos_entrada_y_salida/2_ejercicios_flujos_entrada_y_salida_adaptados_FE.html
+++ b/B5-POO3_IO_y_Persistencia/Ejercicios/2_ejercicios_flujos_entrada_y_salida/2_ejercicios_flujos_entrada_y_salida_adaptados_FE.html
@@ -271,7 +271,7 @@ El nombre del fichero será pasado como argumento en la <strong>línea de comand
 <div class="ejercicio">
 <h3 id="white_check_mark-ejercicio-8">✅ Ejercicio 8 </h3>
 <p>Programa que permita <strong>buscar una palabra</strong> en uno o más ficheros de texto (introducidos en la línea de comandos).</p>
-<p>Se necesitará un método <strong><code>BuscaEnFichero(string ruta, string palabra)</code></strong>, que extraerá las <strong>líneas</strong> del fichero y llamará a la función <strong><code>BuscaEnCadena(string cadena, string palabra)</code></strong> que comprobará si las cadenas son iguales.</p>
+<p>Se necesitará un método <strong><code>BuscaEnFichero(string ruta, string palabra)</code></strong>, que extraerá las <strong>líneas</strong> del fichero y llamará a la función <strong><code>BuscaEnCadena(string cadena, string palabra)</code></strong> que comprobará si la palabra está en la cadena.</p>
 <p>En la línea de comandos introducirás la palabra y los nombres de fichero a buscar y te mostrará un mensaje para cada fichero, en el que te indicará si ha sido encontrada en ese fichero.</p>
 </div> <!-- fin ejercicio -->
 <div class="ejercicio">
