deploy: programacioniesbalmis/programacioniesbalmis@818ef1096c7da29c2dbaced8494c387a459bf591

--- a/B6-POO4_Avanzada/Ejercicios/2_ejercicios_polimorfismo_propiedades/2_ejercicios_polimorfismo_y_propiedades.html
+++ b/B6-POO4_Avanzada/Ejercicios/2_ejercicios_polimorfismo_propiedades/2_ejercicios_polimorfismo_y_propiedades.html
@@ -580,7 +580,7 @@ Saldo tras operación <span class="token parameter variable">-590</span>
 <li>
 <p><strong>Clase Receta</strong> representa una receta culinaria compuesta por varios ingredientes.</p>
 <ul>
-<li>Ingredientes - que representa la relación de composición entre la receta y la línea de ingredientes de esta. Avitualmente las recetas pueden tener más de un ingrediente.</li>
+<li>Ingredientes - que representa la relación de composición entre la receta y la línea de ingredientes de esta. Habitualmente las recetas pueden tener más de un ingrediente.</li>
 <li>Nombre - propiedad pública de solo lectura y autoimplementada que almacena el nombre de la receta.</li>
 <li>CosteTotal - propiedad calculada y pública que suma los subtotales de todas las líneas de ingredientes para obtener el costo total de la receta.</li>
 <li>AñadeIngrediente(Ingrediente producto, int cantidad) método que agrega un ingrediente a la receta. Si el ingrediente no está en stock, lanza una excepción. Si hay suficiente stock, lo descuenta de este y lo añade a la receta.</li>
