deploy: programacioniesbalmis/programacioniesbalmis@a2984ab91e22faf4ec4a3049ffcbc6219ed7840d

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -362,7 +362,24 @@
       </div>
 
 
-
+      <div class="col-xxl-6">
+        <div class="text-start border rounded p-3 shadow w-100">
+          
+          <div class="collapsed" data-bs-toggle="collapse" href="#bloque10" role="button">
+            <div class="h4">Bloque 10 - Bases de datos relacionales en C#</div>
+          </div>
+          
+          <div class="collapse" id="bloque10">
+            <ul class="list-group list-group-numbered">
+              <li class="h6 list-group-item list-group-item-action">
+                <a target="_blank" href="./B10-Bases_de_datos/ejercicios/1_ejercicios_bases_datos_relacionales/1_ejercicios_bases_datos_relacionales.html">
+                  Ejercicios bases de datos relacionales
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
     </div>
   </main>
