deploy: programacioniesbalmis/programacioniesbalmis@3b622f9de6458714244eb41d8c0e68330bf997b2

--- a/B8-Programacion_Funcional/Ejercicios/EjemplosExamen/ejemplo1/ejemplo1.html
+++ b/B8-Programacion_Funcional/Ejercicios/EjemplosExamen/ejemplo1/ejemplo1.html
@@ -214,29 +214,8 @@
 <div style="font-size: 75%; border-style: solid; border-width: thin; padding: 3pt;">
 <p><strong>Instrucciones para la realización de la prueba:</strong></p>
 <ul>
-<li>
-<p>Duración de la prueba <strong>2 h 45 m</strong> desde el comienzo de la misma.</p>
-</li>
-<li>
-<p>Lee atentamente el enunciado y no formules tus preguntas en voz alta, levanta la mano y espera a que el profesor te diga que tienes que hacer.</p>
-</li>
-<li>
-<p>Si te atascas en un apartado déjalo y pasa al siguiente. Cada apartado tiene su puntuación, independientemente del funcionamiento del programa final y el orden propuesto en el enunciado.</p>
-</li>
-<li>
-<p>Penalizará con <strong>0,1 décimas</strong> en cada uno de los siguientes casos:</p>
-<ul>
-<li>Llaves mal puestas e instrucciones mal tabuladas dentro de un bloque.</li>
-<li>No seguir las reglas de nomenclatura de C#.</li>
-<li>Identificador de variable o método que a juicio del profesor no esté bien puesto porque no sigue las reglas descritas en classe.</li>
-</ul>
-</li>
-<li>
-<p><strong>No se puede usar ningún tipo de dispositivo USB, ni código de ejercicios o ejemplos realizados en clase. Solo los pdf de apuntes que se te proporcionarán para la ocasión</strong>.</p>
-</li>
-<li>
-<p>En caso de pillar a algún alumno copiando o usando material no autorizado se le retirará el examen y su calificación en la evaluación será un suspenso.</p>
-</li>
+<li>Duración de la prueba <strong>2 h 45 m</strong> desde el comienzo de la misma.</li>
+<li><strong><a href="./ejemplo1.pdf">DESCARGAR ENUNCIADO</a></strong></li>
 </ul>
 </div>
 <div style="page-break-after:always;"></div>
