deploy: programacioniesbalmis/programacioniesbalmis@b180f4edffc8a90f5e5991b2c70985d873a77671

--- a/Anexos/Anexos_25/ejercicios/1_ejercicios_json/1_ejercicios_json.html
+++ b/Anexos/Anexos_25/ejercicios/1_ejercicios_json/1_ejercicios_json.html
@@ -177,7 +177,7 @@
     
       <div class="crossnote markdown-preview  ">
       
-<h1 id="ejercicios-bases-de-datos-relacionales">Ejercicios Bases de Datos Relacionales </h1>
+<h1 id="ejercicios-json">Ejercicios JSon </h1>
 <p><a href="./1_ejercicios_json.md">Descargar estos ejercicios</a></p>
 <h2 id="índice">Índice </h2>
 
