deploy: programacioniesbalmis/programaciondam@f071bcbb05698c1aa5fcf3f6ce0f8d2924c7f81f

--- a/u17_poo_gestion_de_errores/ejercicios/1_ejercicios/1_ejercicios_poo_gestion_de_errores.html
+++ b/u17_poo_gestion_de_errores/ejercicios/1_ejercicios/1_ejercicios_poo_gestion_de_errores.html
@@ -258,7 +258,8 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
 <div class="admonition info">
 <p class="admonition-title">Antes de empezar</p>
 </div>
-<p>Estos ejercicios están pensados para trabajar de forma avanzada el manejo de excepcionesen C#. Se recomienda revisar los apuntes de la unidad antes de resolverlos.</p>
+<p>Para realizar estos ejercicios, deberás descargar los recursos del enlace de <a href="./recursos/1_ejercicios_poo_gestion_de_errores_recursos.zip">proyecto_poo_gestion_errores</a>. Como puedes ver, la solución está compuesta de varios proyectos. Cada uno de ellos corresponde con un ejercicio, deberás implementar todo el código, tanto de la Main como de los métodos que se piden en cada ejercicio. Cada proyecto contiene el test correspondiente, que deberás pasar para comprobar que has hecho el ejercicio correctamente.<br>
+Estos ejercicios están pensados para trabajar de forma avanzada el manejo de excepcionesen C#. Se recomienda revisar los apuntes de la unidad antes de resolverlos.</p>
 <div class="box_bg_lightgreen">
 <h3 id="ejercicio-1-calculadora-avanzada-y-excepciones-predefinidas">Ejercicio 1. Calculadora avanzada y excepciones predefinidas </h3>
 <p>Crea una clase <code>CalculadoraAvanzada</code> con los siguientes métodos:</p>
