deploy: programacioniesbalmis/programaciondam@0aa80c06f64b681245973a49863461b4d6329047

--- a/semipresencial/guia_didactica_semipresencial.html
+++ b/semipresencial/guia_didactica_semipresencial.html
@@ -440,7 +440,7 @@ necesario.</li>
 </li>
 </ul>
 <h2 id="contenidos-del-módulo-profesional-y-actividades-a-realizar">Contenidos del módulo profesional y actividades a realizar </h2>
-<p>Los contenidos que se desarrollarán para la consecución de los objetivos antes expuestos son los que se presentan en la siguiente tabla, organizados por quincenas, siendo la siguiente planificación una previsión del <strong>curso 2024/2025</strong> y pudiendo ser susceptible a modificaciones debido a causas de diversa índole: refuerzo educativo de temas o aspectos que se detecten complejos para el alumno, razones sanitarias, etc.</p>
+<p>Los contenidos que se desarrollarán para la consecución de los objetivos antes expuestos son los que se presentan en la siguiente tabla, organizados por quincenas, siendo la siguiente planificación una previsión del <strong>curso 2025/2026</strong> y pudiendo ser susceptible a modificaciones debido a causas de diversa índole: refuerzo educativo de temas o aspectos que se detecten complejos para el alumno, razones sanitarias, etc.</p>
 <h3 id="contenidos">Contenidos </h3>
 <div class="row">
 <div class="col-sm-6">
@@ -636,16 +636,8 @@ necesario.</li>
 <h3 id="actividades-a-realizar">Actividades a realizar </h3>
 <p>En cada quincena al alumno/a se le propondrá la realización uno o varios bloques de actividades teórico-prácticas ejercicios a realizar que serán de dos tipos:</p>
 <ol>
-<li>
-<p><strong>Evaluables</strong>:</p>
-<ul>
 <li><strong>Cuestionarios</strong>: Cada bloque temático finalizará con un cuestionario. Estos cuestionarios <strong>deberán realizarse de forma obligatoria</strong> y evaluarán si hemos entendido las definiciones y conceptos teórico-abstractos tratados en la unidad correspondiente.</li>
-<li><strong>Ejercicios</strong>: Aquellos ejercicios marcados con un <em>'check'</em> verde ✅ y <strong>deberán entregarse de forma obligatoria</strong> por la plataforma Aules para su comprobación y calificación.</li>
-</ul>
-</li>
-<li>
-<p><strong>Autoevaluables</strong>: Los ejercicios sin el <em>'check'</em>, se podrán resolver en la tutorías durante la quincena correspondiente y se proporcionará su solución al abrir cada bloque.</p>
-</li>
+<li><strong>Ejercicios</strong>: <strong>Deberán entregarse de forma obligatoria</strong> por la plataforma Aules para su comprobación y calificación.</li>
 </ol>
 <div class="admonition tip">
 <p class="admonition-title">Importante</p>
@@ -896,7 +888,7 @@ necesario.</li>
 </li>
 <li>
 <p><strong>20%</strong> Actividades prácticas de entrega obligatoria hasta el momento de la evaluación con una calificación de 0 a 10.</p>
-<p>Cada ejercicio obligatorio (✅) dentro de un bloque de ejercicios se calificará como <strong>'<em>Apta</em>'</strong> o <strong>'<em>No Apta</em>'</strong> y la nota del bloque vendrá definida por el número de ejercicios <strong>'<em>Aptos</em>'</strong> sobre el total de ejercicios obligatorios del bloque.</p>
+<p>Cada ejercicio se calificará como <strong>'<em>Apta</em>'</strong> o <strong>'<em>No Apta</em>'</strong> y la nota del bloque vendrá definida por el número de ejercicios <strong>'<em>Aptos</em>'</strong> sobre el total de ejercicios obligatorios del bloque. En el caso de haber <strong>test automáticos</strong>, se considerará <strong>'<em>Apta</em>'</strong> si pasa el test automático.</p>
 </li>
 </ol>
 <p>Su nota final, correspondiente a la evaluación continua, vendrá dada por la media ponderada de cada trimestre según los siguientes porcentajes:</p>
@@ -1155,13 +1147,12 @@ Con este proceder se pretende evitar que los alumnos entreguen prácticas copiad
 <ul>
 <li><a href="https://docs.microsoft.com/es-es/dotnet/csharp/" target="_blank">Documentación oficial C#</a> Castellano.</li>
 <li><a href="https://www.youtube.com/watch?v=6EBNIgkrU74&amp;list=PLU8oAlHdN5BmpIQGDSHo5e1r4ZYWQ8m4B&amp;ab_channel=pildorasinformaticas" target="_blank">Curso en YouTube C#</a> Castellano (Canal de Píldoras Informáticas).</li>
-<li><a href="https://www.youtube.com/watch?v=iPupY75BEvo&amp;list=PL0bfr51v6JJEvSoAnCNYHM9b-75JQSoad&amp;ab_channel=NachoCabanes" target="_blank">Curso en YouTube C#</a> Castellano (Canal de Nacho Cabanes) + <a href="https://openlibra.com/es/book/introduccion-a-la-programacion-con-c-2" target="_blank">libro gratuito del autor en OpenLibra</a>.</li>
+<li><a href="https://www.youtube.com/watch?v=iPupY75BEvo&amp;list=PL0bfr51v6JJEvSoAnCNYHM9b-75JQSoad&amp;ab_channel=NachoCabanes" target="_blank">Curso en YouTube C#</a> Castellano (Canal de Nacho Cabanes).</li>
 <li><a href="https://www.tutorialesprogramacionya.com/csharpya/" target="_blank">Curso Web de C#</a> Castellano.</li>
 <li><a href="https://openlibra.com/es/book/c-school" target="_blank">Libro de C# gratuito en OpenLibra</a> Inglés.</li>
 <li><a href="https://hackr.io/tutorials/learn-c-sharp" target="_blank"><strong>hackr.io</strong> Buscador de cursos gratuitos.</a> Inglés</li>
 <li><a href="https://scanlibs.com/?s=C%23" target="_blank">Libros y cursos de C#.</a> Principalmente en inglés y de pago.</li>
 <li><a href="https://www.codecademy.com/learn/learn-c-sharp" target="_blank">Curso On-Line CodeAcademy</a> Inglés, precisa de registro y contenido adicional de pago.</li>
-<li><a href="https://www.lawebdelprogramador.com/pdf/1895-APRENDA-A-PROGRAMAR-COMO-SI-ESTUVIERA-EN-PRIMERO.html" target="_blank">Aprenda a programar como si estuviera en primero.</a> Castellano. Nivel principiante.</li>
 </ul>
 <p>Otros recursos para profundizar una vez finalizado el curso:</p>
 <ul>
