deploy: programacioniesbalmis/programaciondam@c77744461b473840fd4c0a4b8cfe2656a0360494

--- a/u2_instalacion_y_primer_proyecto/ejercicios/1_ejercicios/1_ejercicios_instalacion_y_primer_proyecto.html
+++ b/u2_instalacion_y_primer_proyecto/ejercicios/1_ejercicios/1_ejercicios_instalacion_y_primer_proyecto.html
@@ -21,7 +21,7 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
   font-family: 'Catamaran';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/catamaran/v27/o-0bIpQoyXQa2RxT7-5B6Ryxs2E_6n1iPHjd5a7dvg.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/catamaran/v28/o-0bIpQoyXQa2RxT7-5B6Ryxs2E_6n1iPHjd5a7dvg.ttf) format('truetype');
 }
 @page a4landscape {
   size: A4 landscape;
@@ -256,7 +256,7 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
 <p><strong>Mediante Consola</strong>. Primero abre el tema por la parte  <strong><code>Creación desde la línea de comandos (CLI)</code></strong> y apóyate en los apuntes para realizar los siguientes pasos:</p>
 <ol>
 <li>
-<p>Vas a crear un proyecto de consola mediante la línea de comandos o el terminal de VS Code. Primero deberás situarte en una ruta que consideres y crear una carpeta para que contenga el proyecto llamada <strong><code>MisProyectosConsola</code></strong>. El proyecto se llamará <strong><code>MiPrimerProyecto</code></strong> y lo crearas con el comando indicado en los apuntes.</p>
+<p>Vas a crear un proyecto de consola mediante la línea de comandos [CMD] de Windows. Primero deberás situarte en una ruta que consideres y crear una carpeta para que contenga el proyecto llamada <strong><code>MisProyectosConsola</code></strong>. El proyecto se llamará <strong><code>MiPrimerProyecto</code></strong> y lo crearas con el comando indicado en los apuntes.</p>
 <pre data-role="codeBlock" data-info="console" class="language-console console"><code>dotnet new console -n MiPrimerProyecto
 </code></pre></li>
 <li>
@@ -277,7 +277,7 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
 </code></pre></li>
 <li>
 <p>Añadiremos nuestro proyecto a la solución con</p>
-<pre data-role="codeBlock" data-info="console" class="language-console console"><code>dotnet sln MiPrimeraSolucion.sln add MiPrimerProyecto.csproj
+<pre data-role="codeBlock" data-info="console" class="language-console console"><code>dotnet sln MiPrimeraSolucion.sln add ./MiPrimerProyecto/MiPrimerProyecto.csproj
 </code></pre></li>
 <li>
 <p>Revisa otra vez los ficheros generados y localiza la solución <strong><code>.sln</code></strong>. Abre la solución y revisa en que línea aparece añadido tu proyecto a la solución.</p>
