deploy: programacioniesbalmis/programaciondam@466093937ff2c237eae3221202300e3470e316f3

--- a/u7_funciones/ejercicios/2_ejercicios/2_ejercicios_funciones.html
+++ b/u7_funciones/ejercicios/2_ejercicios/2_ejercicios_funciones.html
@@ -441,7 +441,7 @@ Presiona cualquier tecla para salir...
 <p>El programa pedirá que introduzcas el número de participantes a jugar.</p>
 </li>
 <li>
-<p>Cada participante tirará 3 veces un dado con valores entre 1 y 100 (electrónico se entiende), sumándose el valor de las 3 jugadas. Ganará el participante que obtenga mayor puntuación según las siguientes reglas:</p>
+<p>Cada participante tirará 3 veces un dado con valores entre 1 y 100 (electrónico se entiende), sumándose los puntos de las 3 jugadas. Ganará el participante que obtenga mayor puntuación según las siguientes reglas:</p>
 <ul>
 <li>Si el nº obtenido es múltiplo de 3 o de 5 sumara 10 pts.</li>
 <li>Si el nº obtenido es múltiplo de 4 o de 6 sumara 5 pts.</li>
